--- a/app/templates/_msg.html
+++ b/app/templates/_msg.html
@@ -44,7 +44,7 @@ want table to be entirely clickable -->
                 </p>
                 {% else %}
                 <p>
-                    <a class="btn btn" style="color:white;background-color:rgb(129, 129, 129);cursor:default;"> {{ _('User joined project.') }} </a>
+                    <a class="btn btn" style="color:white;background-color:rgb(129, 129, 129);cursor:default;"> {{ _('Join request accepted.') }} </a>
                 </p>
                 {% endif %}
 
