--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,16 +1,21 @@
 <html>
     <head>
         {% if title %}
-            <title>{{ title }} - CollabFinder</title>
+            <title>{{ title }} - CollabSource</title>
         {% else %}
-            <title>CollabFinder</title>
+            <title>CollabSource</title>
         {% endif %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>    
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+        <!-- for autocomplete textfield -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.10/css/select2.min.css" rel="stylesheet" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.10/js/select2.min.js"></script>
         
-        
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
         {{ moment.include_moment() }} <!-- generates a <script> tag (this may not work without flask-bootstrap) -->
         {{ moment.include_moment() }}
         {{ moment.lang(g.locale) }}
@@ -44,9 +49,9 @@
         </style>
     </head>
     <body>
-        <!-- {% block navbar %} -->
+        {% block navbar %}
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">CollabFinder</a>
+            <a class="navbar-brand" href="{{ url_for('main.index') }}">CollabSource</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -55,6 +60,9 @@
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                   <a class="nav-link" href="{{ url_for('main.explore') }}">{{ _('Explore') }}</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('main.create_project') }}">{{ _('Create Project') }}</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -82,10 +90,10 @@
                   {% endif %}
                 
                 {% if current_user.is_anonymous %}
-                <li><a href="{{ url_for('auth.login') }}">{{ _('Login') }}</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.login') }}">{{ _('Login') }}</a></li>
                 {% else %}
                 <li>
-                  <a href="{{ url_for('main.messages') }}"> 
+                  <a class="nav-link" href="{{ url_for('main.messages') }}"> 
                     &nbsp; {{ _('Messages') }} &nbsp;
                     {% set new_notifs = current_user.new_requests() %} 
                     {% if new_notifs %}
@@ -93,13 +101,13 @@
                     {% endif %}
                   </a>
                 </li>
-                <li><a href="{{ url_for('main.user', username=current_user.username) }}">{{ _('Profile') }} &nbsp; </a></li> <!-- fix spacing -->
-                <li><a href="{{ url_for('auth.logout') }}">{{ _('Logout') }}</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.user', username=current_user.username) }}">{{ _('Profile') }} &nbsp; </a></li> <!-- fix spacing -->
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.logout') }}">{{ _('Logout') }}</a></li>
                 {% endif %}
               </ul>
             </div>
           </nav>
-        <!-- {% endblock %} -->
+        {% endblock %}
         
         <hr>
         <div class="container">
