--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,35 +20,44 @@
         {{ moment.include_moment() }}
         {{ moment.lang(g.locale) }}
         <style>
-             .fpage_div {
+          .fpage_div {
               /* this is where the project search and creation button are */
               background-color: lightblue;
               text-align: center;
-              width: 300px;
-              height: 250px;
+              width: 600px;
+              height: 400px;
               border-radius: 25px;
               margin-top: 30px;
+              font-size: 30px;
              }
-             .go_center {
-                position: absolute; 
-                left: 50%;
-                margin-left: -100px;
-                text-align: center;
-                display: inline-block;
-                top:100;
-                z-index: 1;
-             }
-             .project_stream {
-                position:absolute; 
-                margin-left: 0px;
-             }
-            
-            h2 {
-              size: 10 !important;
+          .go_center {
+            position: relative; 
+            left: 50%;
+            margin-left: -300px;
+            text-align: center;
+            display: inline-block;
+            /* top:40; */
+            z-index: 1;
             }
+          .project_stream {
+            position:absolute; 
+            margin-left: 0px;
+            clear: both;
+          }
+        
+          h2 {
+            size: 10 !important;
+          }
+
+          #grad1 {
+        background-image: linear-gradient(to bottom right, #d6e9ff, #e9e9e9);
+          }
+          #grad2 {
+        background-image: linear-gradient(to bottom, #3292ff, #e4b6ff);
+          }
         </style>
     </head>
-    <body>
+    <body id="grad1">
         {% block navbar %}
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="{{ url_for('main.index') }}">CollabSource</a>
@@ -109,7 +118,6 @@
           </nav>
         {% endblock %}
         
-        <hr>
         <div class="container">
             {% with messages = get_flashed_messages() %}
             {% if messages %}
