--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,32 +1,36 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>{{ _('Hi, %(username)s!', username=current_user.username) }}</h1>
+<!-- <h1>{{ _('Hi, %(username)s!', username=current_user.username) }}</h1> -->
 <br><br>
-<div class = "go_center fpage_div">
+<div class = "go_center fpage_div jumbotron" id="grad2">
     {% if g.search_form %}
-    <form class="navbar-form" method="get" action="{{ url_for('main.search') }}" style="margin-top: 25px; width: 200px; text-align: center; display: inline-block;">
-        <div class="form-group">
-            {{ g.search_form.q(size=20, class='form-control',
+    <form class="form-inline" method="get" action="{{ url_for('main.search') }}" style="margin-top: 50px; width: 400px; display: inline-block;">
+        <!-- <div class="form-group"> -->
+            {{ g.search_form.q(size=20, class='input-lg',
                 placeholder=g.search_form.q.label.text) }}
-        </div>
+        <!-- </div> -->
+        <button class="btn btn-lg" type="submit" style="color:white;background-color:#ff56ff;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+              </svg></button>
     </form>
     {% endif %}
 
     <p>or...</p><br>
 
-    <a class="btn btn-primary" href="{{ url_for('main.create_project') }}" role="button">Create a new project!</a>
+    <a class="btn btn-lg" href="{{ url_for('main.create_project') }}" role="button" style="color:white;background-color:#5683ff;height:50px;width:275px">Start a project</a>
 </div>
 
 <!-- User feed -->
 
-<div class='project_stream' >
-
+<!-- <div class='project_stream' >
+{#
     {% for project in projects %}
     {% include '_proj_pvw.html' %}
     {% endfor %}
 
-    <nav aria-label="..."> <!-- supposed to be greyed out and horizontal -->
+    <nav aria-label="..."> 
         <ul class="pager">
             <li class="previous{% if not prev_url %} disabled{% endif %}">
                 <a href="{{ prev_url or '#' }}">
@@ -40,8 +44,8 @@
             </li>
         </ul>
     </nav>
-
-</div>
+#}
+</div> -->
 
     
 <script type="text/javascript">
