--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,44 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.fpage_div {
+  /* this is where the project search and creation button are */
+  background-color: lightblue;
+  text-align: center;
+  width: 600px;
+  height: 400px;
+  border-radius: 25px;
+  margin-top: 30px;
+  font-size: 30px;
+ }
+.go_center {
+position: relative; 
+left: 50%;
+margin-left: -300px;
+text-align: center;
+display: inline-block;
+/* top:40; */
+z-index: 1;
+}
+.project_stream {
+position:absolute; 
+margin-left: 0px;
+clear: both;
+}
+
+h2 {
+size: 10 !important;
+}
+
+#grad1 {
+background-image: linear-gradient(to bottom right, #d6e9ff, #e9e9e9);
+height: 100%;
+margin: 0;
+background-repeat: no-repeat;
+background-attachment: fixed;
+}
+#grad2 {
+background-image: linear-gradient(to bottom, #3292ff, #e4b6ff);
 }
