--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,17 +1,91 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
 
-#grad1 {
-  background-image: linear-gradient(to bottom right, #d6e9ff, #e9e9e9);
+.fpage_div {
+    /* this is where the project search and creation button are */
+    background-color: lightblue;
+    text-align: center;
+    width: 600px;
+    height: 400px;
+    border-radius: 25px;
+    margin-top: 30px;
+    font-size: 30px;
+   }
+  .go_center {
+    position: relative; 
+    left: 50%;
+    margin-left: -300px;
+    text-align: center;
+    display: inline-block;
+    /* top:40; */
+    z-index: 1;
   }
+  .project_stream {
+  position:absolute; 
+  margin-left: 0px;
+  clear: both;
+  }
+  
+  h2 {
+  size: 10 !important;
+  }
+  
+  #grad1 {
+  background-image: linear-gradient(to bottom right, #d6e9ff, #e9e9e9);
+  height: 100%;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  }
+  #grad2 {
+  background-image: linear-gradient(to bottom, #3292ff, #e4b6ff);
+  }
+  
+  .linkButton {
+    background: none!important;
+    border: none;
+  }
+  
+  /* PROEJCT REQUEST MODAL  */
+  .backdrop {
+    position: fixed;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.75);
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+  }
+  
+  .modal1 {
+    
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2); 
+    border-radius: 6px;
+    background-color: white; 
+    padding: 1rem;
+    text-align: center;
+    width: 30rem; 
+    z-index: 10;
+    position: fixed;
+    top: 20vh;
+    left: calc(50% - 15rem);
+  }
+
+/*NAVBAR */
+header {
+  background: #fff;
+}
+header .container {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+header a {
+  color: #333;
+  text-decoration: none;
+}
